--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 
       <a-sky id="sky" color="#53cbea"></a-sky>
       
-      <a-entity position="0 1 3">
-        <a-camera universal-controls="acceleration: 10">
-              <a-entity raycaster="far: 150; objects: .intersectable" cursor geometry="primitive: ring; radiusOuter: 0.015;
-              radiusInner: 0.01; segmentsTheta: 32" material="color: #283644; shader: flat" position="0 0 -0.75"></a-entity>
+      
+      <a-entity position="0 0 0">
+        <a-camera universal-controls>
+            <a-entity raycaster="far: 150; objects: .intersectable" cursor geometry="primitive: ring; radiusOuter: 0.015;
+                      radiusInner: 0.01; segmentsTheta: 32" material="color: #283644; shader: flat" position="0 0 -0.75"></a-entity>
         </a-camera>
-      </a-entity>
+    </a-entity>
 
       <!--Sound -->
       <a-assets>
